--- a/package.json
+++ b/package.json
@@ -21,6 +21,9 @@
 	},
 	"homepage": "https://github.com/KWCSSA/idol-finals-2019#readme",
 	"dependencies": {
+		"basic-auth": "^2.0.1",
+		"body-parser": "^1.19.0",
+		"cors": "^2.8.5",
 		"dotenv": "^8.2.0",
 		"express": "^4.17.1",
 		"mongoose": "^5.7.7",
