--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
 	"main": "src/index.js",
 	"scripts": {
 		"start": "node src/index.js",
-		"build": "rimraf ./build && copyfiles ./src/**/* package.json .env ./build/",
+		"build": "npm run build --prefix client",
 		"dev": "nodemon src/index.js",
 		"deploy": "npm install --production && npm run pm2",
 		"pm2": "NODE_ENV=production pm2 start src/index.js --name idol-finals-2019"
@@ -21,17 +21,19 @@
 	},
 	"homepage": "https://github.com/KWCSSA/idol-finals-2019#readme",
 	"dependencies": {
-		"basic-auth": "^2.0.1",
 		"body-parser": "^1.19.0",
-		"cors": "^2.8.5",
+		"connect-mongo": "^3.1.2",
 		"dotenv": "^8.2.0",
 		"express": "^4.17.1",
+		"express-session": "^1.17.0",
+		"helmet": "^3.21.2",
 		"mongoose": "^5.7.7",
+		"passport": "^0.4.0",
+		"passport-local": "^1.0.0",
 		"winston": "^3.2.1"
 	},
 	"devDependencies": {
-		"copyfiles": "^2.1.1",
-		"nodemon": "^1.19.4",
-		"rimraf": "^3.0.0"
+		"cors": "^2.8.5",
+		"nodemon": "^1.19.4"
 	}
 }
